[tool.poetry]
name = "lr1"
version = "0.1.0"
description = ""
authors = ["nikto_b <nikto_b@newt.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alphabet-detector = "^0.0.7"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
